// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`変数 数値 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 1,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 1,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          },
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 5,
                                                                    \\"endOffset\\": 5,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 5,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ],
                                        \\"AdditionOperator\\": [
                                          {
                                            \\"image\\": \\"+\\",
                                            \\"startOffset\\": 3,
                                            \\"endOffset\\": 3,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 3,
                                            \\"endColumn\\": 3,
                                            \\"tokenTypeIdx\\": 20,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Plus\\",
                                              \\"PATTERN\\": {},
                                              \\"CATEGORIES\\": [
                                                {
                                                  \\"name\\": \\"AdditionOperator\\",
                                                  \\"PATTERN\\": {},
                                                  \\"tokenTypeIdx\\": 19,
                                                  \\"CATEGORIES\\": [],
                                                  \\"categoryMatches\\": [
                                                    20,
                                                    21
                                                  ],
                                                  \\"categoryMatchesMap\\": {
                                                    \\"20\\": true,
                                                    \\"21\\": true
                                                  },
                                                  \\"isParent\\": true
                                                }
                                              ],
                                              \\"tokenTypeIdx\\": 20,
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 7,
                          \\"endOffset\\": 8,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 7,
                          \\"endColumn\\": 8,
                          \\"tokenTypeIdx\\": 43,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 43,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 10,
                          \\"endOffset\\": 14,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 10,
                          \\"endColumn\\": 14,
                          \\"tokenTypeIdx\\": 10,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 10,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"value\\",
                                                                    \\"startOffset\\": 16,
                                                                    \\"endOffset\\": 20,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 10,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 10,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          },
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 24,
                                                                    \\"endOffset\\": 24,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 9,
                                                                    \\"endColumn\\": 9,
                                                                    \\"tokenTypeIdx\\": 5,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 5,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ],
                                        \\"AdditionOperator\\": [
                                          {
                                            \\"image\\": \\"+\\",
                                            \\"startOffset\\": 22,
                                            \\"endOffset\\": 22,
                                            \\"startLine\\": 3,
                                            \\"endLine\\": 3,
                                            \\"startColumn\\": 7,
                                            \\"endColumn\\": 7,
                                            \\"tokenTypeIdx\\": 20,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Plus\\",
                                              \\"PATTERN\\": {},
                                              \\"CATEGORIES\\": [
                                                {
                                                  \\"name\\": \\"AdditionOperator\\",
                                                  \\"PATTERN\\": {},
                                                  \\"tokenTypeIdx\\": 19,
                                                  \\"CATEGORIES\\": [],
                                                  \\"categoryMatches\\": [
                                                    20,
                                                    21
                                                  ],
                                                  \\"categoryMatchesMap\\": {
                                                    \\"20\\": true,
                                                    \\"21\\": true
                                                  },
                                                  \\"isParent\\": true
                                                }
                                              ],
                                              \\"tokenTypeIdx\\": 20,
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 26,
                          \\"endOffset\\": 27,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 12,
                          \\"tokenTypeIdx\\": 43,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 43,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 29,
                          \\"endOffset\\": 33,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 14,
                          \\"endColumn\\": 18,
                          \\"tokenTypeIdx\\": 10,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 10,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`変数 文字列 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"StringLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                                    \\"startOffset\\": 1,
                                                                    \\"endOffset\\": 6,
                                                                    \\"startLine\\": 2,
                                                                    \\"endLine\\": 2,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 6,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"StringLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 8,
                          \\"endOffset\\": 9,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 8,
                          \\"endColumn\\": 9,
                          \\"tokenTypeIdx\\": 43,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 43,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 11,
                          \\"endOffset\\": 15,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 15,
                          \\"tokenTypeIdx\\": 10,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 10,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"value\\",
                                                                    \\"startOffset\\": 17,
                                                                    \\"endOffset\\": 21,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 1,
                                                                    \\"endColumn\\": 5,
                                                                    \\"tokenTypeIdx\\": 10,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 10,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          },
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"StringLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                                    \\"startOffset\\": 25,
                                                                    \\"endOffset\\": 30,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 9,
                                                                    \\"endColumn\\": 14,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"StringLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ],
                                        \\"AdditionOperator\\": [
                                          {
                                            \\"image\\": \\"+\\",
                                            \\"startOffset\\": 23,
                                            \\"endOffset\\": 23,
                                            \\"startLine\\": 3,
                                            \\"endLine\\": 3,
                                            \\"startColumn\\": 7,
                                            \\"endColumn\\": 7,
                                            \\"tokenTypeIdx\\": 20,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Plus\\",
                                              \\"PATTERN\\": {},
                                              \\"CATEGORIES\\": [
                                                {
                                                  \\"name\\": \\"AdditionOperator\\",
                                                  \\"PATTERN\\": {},
                                                  \\"tokenTypeIdx\\": 19,
                                                  \\"CATEGORIES\\": [],
                                                  \\"categoryMatches\\": [
                                                    20,
                                                    21
                                                  ],
                                                  \\"categoryMatchesMap\\": {
                                                    \\"20\\": true,
                                                    \\"21\\": true
                                                  },
                                                  \\"isParent\\": true
                                                }
                                              ],
                                              \\"tokenTypeIdx\\": 20,
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"ToRightToken\\": [
                        {
                          \\"image\\": \\"->\\",
                          \\"startOffset\\": 32,
                          \\"endOffset\\": 33,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 16,
                          \\"endColumn\\": 17,
                          \\"tokenTypeIdx\\": 43,
                          \\"tokenType\\": {
                            \\"name\\": \\"ToRightToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 43,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"to\\": [
                        {
                          \\"image\\": \\"value\\",
                          \\"startOffset\\": 35,
                          \\"endOffset\\": 39,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 19,
                          \\"endColumn\\": 23,
                          \\"tokenTypeIdx\\": 10,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 10,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
